--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-spritesmith": "^6.3.0",
     "jit-grunt": "^0.10.0",
     "npm": "^3.8.2",
-    "pixrem": "^3.0.0"
+    "pixrem": "^3.0.0",
+    "time-grunt": "^1.3.0"
   },
   "devDependencies": {},
   "author": "Kysela Petr petr@kysela.biz",
