--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jit-grunt": "^0.10.0",
     "npm": "^3.8.2",
     "pixrem": "^3.0.0",
-    "time-grunt": "^1.3.0"
+    "time-grunt": "^1.3.0",
+    "grunt-browser-sync": "^2.2.0"
   },
   "devDependencies": {},
   "author": "Kysela Petr petr@kysela.biz",
