--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "autoprefixer": "^6.3.3",
     "csslint": "^0.10.0",
     "grunt": "^0.4.5",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^0.1.13",
+    "grunt-codekit": "^1.1.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -24,8 +26,7 @@
     "jit-grunt": "^0.10.0",
     "npm": "^3.8.2",
     "pixrem": "^3.0.0",
-    "time-grunt": "^1.3.0",
-    "grunt-browser-sync": "^2.2.0"
+    "time-grunt": "^1.3.0"
   },
   "author": "Kysela Petr petr@kysela.biz",
   "license": [
