--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend_devstack",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "frontend devstack for bootstrap based project",
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -14,7 +14,6 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-image": "^1.3.0",
@@ -22,6 +21,7 @@
     "grunt-kss": "^4.1.0",
     "grunt-postcss": "^0.8.0",
     "grunt-replace": "^0.11.0",
+    "grunt-sass": "^2.1.0",
     "grunt-spritesmith": "^6.3.0",
     "grunt-uncss": "^0.6.1",
     "jit-grunt": "^0.10.0",
